--- a/PWBD.html
+++ b/PWBD.html
@@ -206,10 +206,17 @@
 	<div class="row">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 		  <h5>Choose your guide application</h5></br>
-	      <iframe src="Wanted!Storytelling.html" width="50%" height="100%" title="Choose your guide application"></iframe>
-	  </div>
+	      </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 		  <h5>Share your Stories application</h5></br>
+	   </div>      
+	</div>
+
+	<div class="row">
+	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+	   <iframe src="Wanted!Storytelling.html" width="50%" height="100%" title="Choose your guide application"></iframe>
+	  </div>
+	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 	   <iframe src="Share.html" title="Share your Stories application" width="50%" height="100%"></iframe>
 	  </div>      
 	</div>
