--- a/PWBD.html
+++ b/PWBD.html
@@ -133,22 +133,26 @@
 	   	<h4>The Context</h4>
 		<div class="row">
 			<div class="container col-lg-6 col-md-6" id="RI">
-			<h5>Reference institutions and relevant assets<!-- for your PW, with its institutional goals/(include raster images or/and panoramas)--></h5>
+			<h5>Reference institutions with its institutional goals<!--/(include raster images or/and panoramas)--></h5>
 			<p>When we started thinking about this project, as said inspired by a self-collected corpus of photographs, similar to the ones in the <a href="index.html#portfolio">stories section</a>, the first visual references we thought about had been <strong>memorials</strong> museums and installations such as the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> - hosting a Boltanski work, artist specially devoted to memory and memorial issues - or the initially spontaneous <a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a> - to mention two Bologneses exaples - or the Argentinian <a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a>.
 			All these insitutions are devoted to preserve the public testimony of historical facts as well as to celebrate the intimate memory of missed beloved-ones.</br>
 			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets. For this part we explored some examples such as those mentioned by Simona Caraceni in her Mewselogy course slides (Hermitage cats army guards, <a href="https://bigcomicbros.net/work/6195/" target="_blank">Le chat du Louvre</a>, <a href="http://catsmuseum.org/" target="_blank">Cat Museum Kotor</a> and Cats Museum Malaysia) as well as by visually referring to artists and their pets such as <strong>Giosetta Fioroni and Biri</strong>, <strong>Frida Kahlo and Granizo</strong>, <strong>Henry Matisse and Minouche</strong>, etc.: on this second inspiration, we realized the <a href="stories.html">In Art</a> section, conceived as a virtual exhibition.</p>
 			<p>The overall context will be then possibly a physical museum hosting a temporary physical exhibiton on humans and artist and their pets relationship, that offers also the possibility to the visitors of having an online introduction - <a href="">In History</a> section - a further online exploration of the artists-pets relationship with contents not physically available in the museum - <a href="stories.html">In Art</a> section - an interactive part where loading and sharing their personal stories - <a href="index.html#portfolio">Your Stories</a> section - and possibly a tool able to help proactively people loosing their pets by visualizing geolocated shared data of missing pets - <a href="">Data</a> section.</p>
+		  	<p><b>PUT "DEFINE INST GOALS CARDS".</b></p>
 			</div>
 			<div class="container col-lg-6 col-md-6">
 			<img src="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" class="img-fluid" alt="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei">
 			<figcaption>Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a></figcaption></br>
 			<iframe src="stories.html" width="100%" height="30%"></iframe>
-            </div>
+			</div>
+			<p><b>PUT "PACT FRAMEWORK".</b></p>
 		</div>
-		</div>
+	    </div>
 		<div class="container">
-			<!--h5>Relevant assets (include raster images or/and panoramas)</h5>
-			<p>....</p-->
+			<h5>Relevant assets <!--(include raster images or/and panoramas)--></h5>
+			<p><b>PUT "DEFINE THE CONTEXT CARDS".</b></p>
+			<h5>The target audience <!--(with characteristics, motivations, capabilities and devices)Personae e altro--></h5>
+			<p><b>PUT "PERSONAE".</b></p>
 			<h5>The location <!--(in case of on-site application it will be the museum or monument)--></h5>
 			<p>As already mentioned, even if a museum could be physically existent, our application is thought to be suitable also to be used totally online, and accordin to ??? (Beltramini and Gaiani, 2012: 60). and thus we can use to define it these two cathegories:</br>
 			<ul>
@@ -156,14 +160,13 @@
 			<ol>5.Virtual with virtual: this last category covers museums with digital spaces that do not exist in reality, and where the objects are also born in digital space (they do not exist in real world), and are created only for the museum. That is to say a completely virtual museum, according to this classification.</ol>
 	  		</ul>
 	  		</p>
-			<h5>The target audience <!--(with characteristics, motivations, capabilities and devices)Personae e altro--></h5>
-			<p>....</p>	
-		</div>
+	   </div>
 		
 		<div class="container" id="Concept">
 			<h4>2. Concept -------- ALISIA</h4>
 			<p>....</p>
 			<h5>(a) <a href="conceptual.html">conceptual map</a></h5>
+			<p><b>PUT "GENERATE IDEAS AND PREPARE CONCEPTS CARDS".</b></p>
 			<p>....</p>
 			<h5>(b) museological approach</h5>
 			<p>Cathegory E or F of Caraceni taxonomy:</br>
@@ -188,11 +191,18 @@
 		</div>
 		<div class="container" id="Goals">
 			<h4>3. Goal (cultural, cognitive, economic, educational etc.) ALISIA?</h4>
-			<p>....</p>
+			<p><b>PUT "DEFINE INSTITUTIONAL GOALS CARDS".</b></p>
 		</div>
 		<div class="container" id="Requirements">
 			<h4>4. Requirements (to reach the goals) ENRICA?</h4>
-			<p>....</p>
+			<p>A requirement is something that your product should do or a quality it should have listed in accordance with its importance:</p>
+			<ul>
+				<li>MUST:</li>
+				<li>SHOULD:</li>
+				<li>COULD:</li>
+				<li>WILL NOT:</li>
+			</ul>
+			<p>They are defined from data on context, content, and people (and their needs).</p>
 		</div>
       </div>
 
