--- a/PWBD.html
+++ b/PWBD.html
@@ -190,11 +190,11 @@
 			<p>....</p>
 		</div>
 		<div class="container" id="Goals">
-			<h4>3. Goal (cultural, cognitive, economic, educational etc.) ALISIA?</h4>
+			<h4>3. Goal (cultural, cognitive, economic, educational etc.) ALISIA</h4>
 			<p><b>PUT "DEFINE INSTITUTIONAL GOALS CARDS".</b></p>
 		</div>
 		<div class="container" id="Requirements">
-			<h4>4. Requirements (to reach the goals) ENRICA?</h4>
+			<h4>4. Requirements (to reach the goals)</h4>
 			<p>A requirement is something that your product should do or a quality it should have listed in accordance with its importance:</p>
 			<ul>
 				<li>MUST:</li>
@@ -208,7 +208,7 @@
 
 <!-- ======= Development Section ======= -->
       <div class="container" id="Dev">
-	  <h3>Development DA ASSEGNARE cos'è twine???</h3>
+	  <h3>Development</h3>
         <p>...</p>
 	<h5>(a) The story (include an interactive narrative using Twine)</h5>
 	<p>Our story tells about a young-adult visitor looking for a new approach art history exhibition. He or she finds the Wanted! website where it is possible to access a short historical preview in the In History section and a selection of pieces of art in the In Art section. She or he is emotionally involved due to their childhood and recent souvenirs about their pets. They enjoy the exibihion, they gain more knowledge and they are happy to contribute at Your stories section with their pets' stories. Moreover they are happy and amused to realize a 3d rendering of their pet to be used in VR or AR and to be able to order for a 3d printed model of it to be gifted.</p>
