--- a/PWBD.html
+++ b/PWBD.html
@@ -222,12 +222,12 @@
 	   </div>      
 	</div>
 
-	<div class="row">
+	<div class="row iframe">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-	   <iframe src="Wanted!Storytelling.html" width="100%" height="300%" title="Choose your guide application"></iframe>
+	   <iframe src="Wanted!Storytelling.html" width="100%" title="Choose your guide application"></iframe>
 	  </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-	   <iframe src="Share.html" title="Share your Stories application" width="100%" height="100%"></iframe>
+	   <iframe src="Share.html" title="Share your Stories application" width="100%"></iframe>
 	  </div>      
 	</div>
 	
