--- a/PWBD.html
+++ b/PWBD.html
@@ -212,13 +212,16 @@
         <p>...</p>
 	<h5>(a) The story (include an interactive narrative using Twine)</h5>
 	<p>Our story tells about a young-adult visitor looking for a new approach art history exhibition. He or she finds the Wanted! website where it is possible to access a short historical preview in the In History section and a selection of pieces of art in the In Art section. She or he is emotionally involved due to their childhood and recent souvenirs about their pets. They enjoy the exibihion, they gain more knowledge and they are happy to contribute at Your stories section with their pets' stories. Moreover they are happy and amused to realize a 3d rendering of their pet to be used in VR or AR and to be able to order for a 3d printed model of it to be gifted.</p>
-	
+	      </br>	
+
+<h5>(b) Description of the interaction between the project and the users (include Interaction Diagram)</h5>
+</br>
 	<div class="row">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-		  <h5>Choose your guide application</h5></br>
+		  <h5>Choose your guide</h5></br>
 	      </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-		  <h5>Share your Stories application</h5></br>
+		  <h5></h5></br>
 	   </div>      
 	</div>
 
@@ -227,13 +230,28 @@
 	   <iframe src="ChooseGuide.html" width="100%" title="Choose your guide application"></iframe>
 	  </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" width="100%">
+	  </div>      
+	</div>
+	</br>
+
+	<div class="row">
+	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+		  <h5></h5></br>
+	      </div>
+	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+		  <h5>Share your Stories</h5></br>
+	   </div>      
+	</div>
+	<div class="row iframe">
+	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+	   <img src="assets/img/interaction/Share.jpg" width="100%" title="Share your Stories interaction schema">
+	  </div>
+	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 	   <iframe src="Share.html" title="Share your Stories application" width="100%"></iframe>
 	  </div>      
 	</div>
-	
 	</br>
-	<h5>(b) Description of the interaction between the project and the users (include Interaction Diagram)</h5>
-			<p>....</p>
 			<h5>(c) Development to reach the cognitive focus</h5>
 			<p>....</p>
 			<h5>(c) Foreseen workflow (includes needed software, hardware, professionals)</h5>
