--- a/PWBD.html
+++ b/PWBD.html
@@ -218,7 +218,7 @@
 </br>
 	<div class="row">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-		  <h5>Choose your guide</h5></br>
+		  <h5><b>Choose your guide</b></h5></br>
 	      </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 		  <h5></h5></br>
@@ -229,7 +229,7 @@
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
 	   <iframe src="ChooseGuide.html" width="100%" title="Choose your guide application"></iframe>
 	  </div>
-	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+	  <div class="col-lg-6 col-md-6 d-flex <!--align-items-stretch"-->>
 	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" width="100%">
 	  </div>      
 	</div>
@@ -237,10 +237,10 @@
 
 	<div class="row">
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-		  <h5></h5></br>
+		  <h5><b>Share your Stories</b></h5></br>
 	      </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-		  <h5>Share your Stories</h5></br>
+		  <h5></h5></br>
 	   </div>      
 	</div>
 	<div class="row iframe">
