--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -81,7 +81,7 @@ E.g.
 Granizo is a deer, an animal especially loved from Mexican people...
 
 What would you like to do now?
-* See the [[work of art portraying the pet-&gt;Work of art portraying the pet]] in the artist&#39;s room of the exhibition
+* See/Go back to the [[work of art portraying the pet-&gt;Work of art portraying the pet]] in the artist&#39;s room of the exhibition
 * Know more about/Go back to [[the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="9" name="Work of art portraying the pet" tags="" position="1627,518" size="100,100">//In this passage, the user can see an emblematic artist&#39;s work of art portraying the pet and have information about it:
 * traditional metadata such as the title, technique, measures, date, etc.
 * where the work of art is physically located possibly with a permanet link to the Cultural Institution preserving it
@@ -113,7 +113,7 @@ Enjoy your visit!
 What would you like to do now?
 
 * Have more details of the [[work of art portraying the pet-&gt;Work of art portraying the pet]] in the artist&#39;s room of the exhibition
-* Know [[more about the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="11" name="Suggestions for knowing more" tags="" position="1309,308" size="100,100">//In this passage, the user can get some bibliography and multimedia contents about the artist, the pet, or their relationship.
+* Know more about/Go back to [[the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="11" name="Suggestions for knowing more" tags="" position="1309,308" size="100,100">//In this passage, the user can get some bibliography and multimedia contents about the artist, the pet, or their relationship.
 The user can then choose among going back to the artist details, choosing a new story or finishing the interactive experience.//
 
 ---
