--- a/stories.html
+++ b/stories.html
@@ -104,6 +104,7 @@ function off() {
           <hr>
         </div>
 
+        <div class="grid-container"><p> [[Frida and Granizo-&gt;Artist-pet story brief introduction]] </p></div>
 
       <div class="grid-container">
         <div class="sinistra"><img src="assets/img/frida_a4.png" width="100%"></div>
