--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -45,20 +45,20 @@ Let [[my pet become a guide-&gt;Hello!]]!</tw-passagedata><tw-passagedata pid="4
 
 Hello, I am your guide!
 My name is ... and ... is my human.
-[[Let&#39;s start with a story!-&gt;Choose a story]]</tw-passagedata><tw-passagedata pid="5" name="Choose a story" tags="" position="1032,547" size="100,100">#Choose a story
+[[Let&#39;s start with a story!-&gt;Choose a story]]</tw-passagedata><tw-passagedata pid="5" name="Choose a story" tags="" position="1032,546" size="100,100">#Choose a story
 
 //In this passage, the user can choose the story they want to be told from the guide//
 
 ---
 
-Choose the story you would like to listen to:
-
-&lt;iframe src=&quot;stories.html&quot; width=&quot;1000wv&quot; height=&quot;500wh&quot;&gt;&lt;/iframe&gt;
+Choose the story you would like to listen to:	  
 
 * [[Frida and Granizo-&gt;Artist-pet story brief introduction]]
 * [[Henri and Minouche-&gt;Artist-pet story brief introduction]]
 * [[Giosetta Fioroni and Biri-&gt;Artist-pet story brief introduction]]
-* [[//Other//-&gt;Artist-pet story brief introduction]] //- still not available//</tw-passagedata><tw-passagedata pid="6" name="Artist-pet story brief introduction" tags="" position="1231,580" size="100,100">#Artist-pet story brief introduction
+* [[//Other//-&gt;Artist-pet story brief introduction]] //- still not available//
+      
+&lt;iframe src=&quot;https://enri-ca.github.io/WANTED/stories.html&quot; width=&quot;1000wv&quot; height=&quot;500wh&quot;&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="6" name="Artist-pet story brief introduction" tags="" position="1231,579" size="100,100">#Artist-pet story brief introduction
 
 //In this passage, the user is briefly introduced to the artist and to the relationship they had with their pet.
 The user can then choose among knowing more about the artist, about the pet, or choosing another story.//
@@ -66,18 +66,18 @@ The user can then choose among knowing more about the artist, about the pet, or 
 ---
 
 //The artist// is born in ... and is famous for ...
-They met first their pet //pet&#39;s name// when ... //(brief introduction)//
+They met first their pet //pet&#39;s name// when ... //---brief introduction---//
 
 What would you like to do now?
 * Know [[more about the artist-&gt;More info about the artist]] (e.g Frida)
 * Know [[more about the pet-&gt;More info about the pet]] (e.g. Granizo)
-* Change to [[another story-&gt;Choose a story]] </tw-passagedata><tw-passagedata pid="7" name="More info about the artist" tags="" position="1406,492" size="100,100">#info about the artist
+* Change to [[another story-&gt;Choose a story]] </tw-passagedata><tw-passagedata pid="7" name="More info about the artist" tags="" position="1454,451" size="100,100">#info about the artist
 //In this passage, the user can get more details about the artist, their artistic evolution and fortune, their life and curiosity.
 The user can then choose among visiting the artist&#39;s room, knowing more about the pet, or having some suggestions to keep learning.//
 
 ---
 
-E.g.: //Frida// born in ... and she suffer a lot ...
+E.g.: //Frida// suffered a lot ...
 
 
 What would you like to do now?
@@ -86,7 +86,7 @@ What would you like to do now?
 * Know more about the [[pet-&gt;More info about the pet]]
 * Have some [[suggestions for knowing more-&gt;Further suggestions]]</tw-passagedata><tw-passagedata pid="8" name="More info about the pet" tags="" position="1402,700" size="100,100">#info about the pet
 //In this passage, the user can have more details about the pet, their story, the social and cultural consideration of their species, some biological peculiarities.
-The user can then choose among looking at work of art portraying the pet or knowing more about the artist//
+The user can then choose among looking at work of art portraying the pet, knowing more about the artist, or having some suggestions to keep learning.//
 
 ---
 
@@ -95,7 +95,8 @@ Granizo is a deer, an animal especially loved from Mexican people...
 
 What would you like to do now?
 * See/Go back to the [[work of art portraying the pet-&gt;art portraying the pet]] in the artist&#39;s room of the exhibition
-* Know more about/Go back to [[the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="9" name="art portraying the pet" tags="" position="1627,518" size="100,100">#Work of art portraying the pet
+* Know more about/Go back to [[the artist-&gt;More info about the artist]]
+* Have some [[suggestions for knowing more-&gt;Further suggestions]]</tw-passagedata><tw-passagedata pid="9" name="art portraying the pet" tags="" position="1627,518" size="100,100">#Work of art portraying the pet
 //In this passage, the user can see an emblematic artist&#39;s work of art portraying the pet and have information about it:
 * traditional metadata such as the title, technique, measures, date, etc.
 * where the work of art is physically located possibly with a permanet link to the Cultural Institution preserving it
@@ -122,14 +123,14 @@ The user can then choose among having more details on the work of art portraying
 ---
 
 Here you are in the Artist&#39;s room of the exhibition. 
-//(brief description)//
+//---brief description---//
 Enjoy your visit!
 
 
 What would you like to do now?
 
 * Have more details of the [[work of art portraying the pet-&gt;art portraying the pet]] in the artist&#39;s room of the exhibition
-* Know more about/Go back to [[the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="11" name="Further suggestions" tags="" position="1309,308" size="100,100">#Further suggestions
+* Know more about/Go back to [[the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="11" name="Further suggestions" tags="" position="1242,390" size="100,100">#Further suggestions
 
 //In this passage, the user can get some bibliography and multimedia contents about the artist, the pet, or their relationship.
 The user can then choose among going back to the artist details, choosing a new story or finishing the interactive experience.//
