--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <img src="assets/img/dogo.png" width="70%">
-            <h3><a href="#portfolio">Your Stories</a></h3>
+            <h3><a href="#your_stories">Your Stories</a></h3>
           </div>
         </div>
         
@@ -296,12 +296,12 @@
     </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="your_stories" class="portfolio">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Check our Portfolio</p>
+          <h2>Your stories</h2>
+          <!--p>Check our Portfolio</p-->
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
